--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wincamcfg"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 description = "A command line utility for managing webcam configuration on windows"
 license = "MIT"
@@ -10,6 +10,7 @@ homepage = "https://github.com/andrewj-t/wincamcfg/"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
+indexmap = { version = "2.7", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
 serde_with = "3.11"
