--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wincamcfg"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2024"
 description = "A command line utility for managing webcam configuration on windows"
 license = "MIT"
@@ -17,7 +17,7 @@ serde_with = "3.11"
 strum = { version = "0.27", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-windows = { version = "0.62.2", features = [
+windows = { version = ">=0.59, <=0.62", features = [
     "Win32_Foundation",
     "Win32_System_Com",
     "Win32_System_Com_StructuredStorage",
@@ -26,7 +26,7 @@ windows = { version = "0.62.2", features = [
     "Win32_System_Registry",
     "Win32_Devices_DeviceAndDriverInstallation",
     "Win32_UI_Shell",
-    "Win32_System_Ole",
+    "Win32_System_Ole"
 ] }
 
 [build-dependencies]
