--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,6 @@ updates:
       interval: "weekly"
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: github-actions
-    directory: "/"
+    directory: "/.github/workflows"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
