--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,8 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+    allow:
+      - dependency-type: "direct"
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: github-actions
     directory: "/.github/workflows"
