--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       run: cargo install cargo-sbom
     
     - name: Generate SBOM
-      run: cargo sbom --output spdx-json > sbom.spdx.json
+      run: cargo sbom --output-format spdx-json > sbom.spdx.json
     
     - name: Upload artifacts
       uses: actions/upload-artifact@v5
