--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,16 +71,8 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     
-    - name: Install cargo-sbom
-      run: cargo install cargo-sbom
-    
-    - name: Generate SBOM
-      run: cargo sbom --output-format spdx-json > sbom.spdx.json
-    
     - name: Upload artifacts
       uses: actions/upload-artifact@v5
       with:
         name: wincamcfg-windows
-        path: |
-          target/release/wincamcfg.exe
-          sbom.spdx.json
+        path: target/release/wincamcfg.exe
